--- a/style.css
+++ b/style.css
@@ -257,6 +257,68 @@ th {
 	padding: 0;
 }
 
+
+/*SYSTEME DE GRILLES********************************************************************************************/
+
+/**on divise la largeur de l'écran en 12 colonnes. Chaque colonne occupe un douzième de la page**************/
+
+/*largeur d'1 colonne*/
+.col-1 {width: 8.33%;}
+
+/*largeur de 2 colonnes*/
+.col-2 {width: 16.66%;}
+
+/*largeur de 3 colonnes*/
+.col-3 {width: 25%;}
+
+/*largeur de 4 colonnes*/
+.col-4 {width: 33.33%;}
+
+/*largeur de 5 colonnes*/
+.col-5 {width: 41.66%;}
+
+/*largeur de 6 colonnes*/
+.col-6 {width: 50%;}
+
+/*largeur de 7 colonnes*/
+.col-7 {width: 58.33%;}
+
+/*largeur de 8 colonnes*/
+.col-8 {width: 66.66%;}
+
+/*largeur de 9 colonnes*/
+.col-9 {width: 75%;}
+
+/*largeur de 10 colonnes*/
+.col-10 {width: 83.33%;}
+
+/*largeur de 11 colonnes*/
+.col-11 {width: 91.66%;}
+
+/*largeur de 12 colonnes*/
+.col-12 {width: 100%;}
+
+/**on aligne les colonnes les unes à côté des autres avec la propriété float**************/
+[class*="col-"] {
+	float: left;
+	padding: 0 15px;
+}
+
+/**
+	chaque rangée de colonnes doit être enveloppée dans une div de class "row". on applique un clear:both sur chaque row afin d'annuler l'effet de float
+    et éviter que les éléments suivants remontent et entourent le "row"
+
+**/
+.row:after {
+	content: "";
+	clear: both;
+	display: block;
+}
+
+
+
+/*END SYSTEME DE GRILLES*************************************************************************************/
+
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
